# websocket-tungstenite-retry

./: Cargo.toml  README
examples/: connect_with_timeout.rs  consume_broadcast.rs  consume_dojo_prod_recent_trades.rs  consume_literpc_priofees.rs  consume_mango.rs  consume_rpc.rs  consume_traffic_recenttrades.rs  consume_traffic_recenttrades_stresstest.rs  explicit_shutdown.rs  mass_services.rs  popular-pairs.csv  sample_connect_401.rs  simple.rs  simple_localhost.rs
src/: lib.rs  main.rs  websocket_stable.rs
