[package]
name = "websocket-tungstenite-retry"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "^2.1"
anyhow = "^1.0"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1", features = ["rt-multi-thread", "time", "macros", "sync", "io-util"] }
tokio-tungstenite = { version = "^0.17", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

[dev-dependencies]
tower-http = { version = "0.4.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
env_logger = "^0.8.4"
jsonrpsee = { version = "^0.18.1", features = ["http-client", "macros"] }

