[package]
name = "websocket-tungstenite-retry"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "^2.1"
anyhow = "^1.0"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1", features = ["rt-multi-thread", "time", "macros", "sync", "io-util"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "^0.26.2", features = ["native-tls", "url"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1.37"

[dev-dependencies]
env_logger = "^0.11.7"
